--- a/style.css
+++ b/style.css
@@ -11,12 +11,25 @@ body{
 .container{
     display: flex;
     align-content: space-around;
+    height: 100vh;
 }
 .textcontainer{
     display: flex;
     background-color: #dfc8ca;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.logo{
+    position:relative;
+    top: -90vh;
+    color: white;
+    background-color: grey;
+    opacity: 80%;
+    display: flex;
+    justify-content: center;
+    font-family: fantasy;
+    font-size: 24px;
 }
 
 /* .textcontainer > .con1{
